# minishell2

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README_IPC.md  TODO.md
inc/: builtins.h  config.h  env.h  hashtable.h  heredoc.h  io.h  ipc.h  minishell.h  tokenizer.h
libft/: CMakeLists.txt  Makefile
libft/inc/: fd.h  libft.h
libft/inc/str/: list.h
libft/src/: ternary.c
libft/src/fd/: fd_control.c
libft/src/mem/: ft_calloc.c  ft_malloc.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_realloc_safe.c
libft/src/str/: ft_itoa.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  listjoin.c
src/: builtin_cd.c  builtin_echo.c  builtin_exit.c  builtin_export.c  builtin_pwd.c  builtin_reader.c  builtin_unset.c  builtins.c  debug_options.c  debug_tokenizer.c  env.c  exec.c  exec_builtin.c  exec_execve_wrapper.c  exec_utils.c  fork_wrapper_utils.c  ft_error.c  hashtable.c  hashtable_iter.c  hashtable_resolver.c  heredoc.c  heredoc_list.c  heredoc_reader.c  init.c  io.c  io_read_until_delimiter.c  ipc.c  minishell.c  parent_child_ipc.c  path_resolver.c  pipe.c  prompt.c  resolver.c  signals_interactive.c  signals_noninteractive.c  tokenizer.c  tokenizer_action_non_special.c  tokenizer_action_pipe.c  tokenizer_action_redirections.c  tokenizer_action_whitespace.c  (+10 more)
test/: dummy.txt  test_entry.c  test_env.c  test_hashtable.c  test_tokenizer.c  tests.h  uassert.c
tests/: tokenizer.c
